--- a/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor.css
+++ b/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor.css
@@ -3,6 +3,10 @@
     border: #f0f2f5 solid 2px;
 }
 
+.dropitem-box-layout {
+    height: auto;
+}
+
 .dropitem {
     position: relative;
     display: flex;
