--- a/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/SettingPanel.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/SettingPanel.razor
@@ -23,7 +23,7 @@
 
     private string ActiveTabKey { get; set; } = "tab_page";
 
-    private PageSettingSchema pagePropertySchema = new PageSettingSchema();
+    private PagePropertySchema pagePropertySchema = new PagePropertySchema();
 
     protected override void OnInitialized()
     {
