--- a/src/DesignEngine/H.LowCode.DesignEngine/_Imports.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/_Imports.razor
@@ -11,4 +11,4 @@
 @using H.LowCode.DesignEngine.SettingPanel
 @using H.Util.Blazor
 @using H.LowCode.DesignEngine.Services
-@using H.LowCode.Metadata
+@using H.LowCode.MetaSchema
