--- a/src/Sample/H.LowCode.Sample.Admin/Layout/NavMenu.razor
+++ b/src/Sample/H.LowCode.Sample.Admin/Layout/NavMenu.razor
@@ -10,7 +10,7 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> 设计器示例
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> DesignEngine 示例
             </NavLink>
         </div>
 
