--- a/src/Sample/H.LowCode.Sample.Admin/Pages/FormTemplate.razor
+++ b/src/Sample/H.LowCode.Sample.Admin/Pages/FormTemplate.razor
@@ -1,6 +1,6 @@
 ﻿@page "/form/{PageId}/{DataId}"
 
-@using H.LowCode.Metadata
+@using H.LowCode.MetaSchema
 
 @inject HttpClient Http
 @inject IRender render
