--- a/src/Sample/H.LowCode.Sample.Admin/_Imports.razor
+++ b/src/Sample/H.LowCode.Sample.Admin/_Imports.razor
@@ -2,7 +2,7 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using H.LowCode.Sample.Admin.Layout
 @using H.LowCode.RenderEngine
-@using H.LowCode.Metadata
+@using H.LowCode.MetaSchema
 @using System.Net.Http
 @using System.Net.Http.Json
 @using System.Reflection
